[package]
name = "evolved-creatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/behavior-evolver", 
    "crates/creature-builder",
    "crates/data-structure-utils", 
    "crates/random-derive", 
]

[dependencies]
behavior-evolver.workspace = true
creature-builder.workspace = true

bevy.workspace = true
bevy_rapier3d.workspace = true

bevy_screen_diagnostics.workspace = true
bevy_panorbit_camera.workspace = true

indicatif = "0.17.8"
termion = "3.0.0"
homedir = "0.2.1"

[workspace.dependencies]
creature-builder = { path = "crates/creature-builder" }
behavior-evolver = { path = "crates/behavior-evolver" }

data-structure-utils = { path = "crates/data-structure-utils" }
random-derive = { path = "crates/random-derive" }

bevy_rapier3d = { version = "0.24.0", default-features = false, features = [ "dim3", "enhanced-determinism", "serde-serialize" ] }
bevy = { version = "0.12.0", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    # "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "serialize"
]}

bevy_screen_diagnostics = "0.4"
bevy_panorbit_camera = "0.10"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
codegen-units = 1
