[package]
name = "behavior-evolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true

bevy_panorbit_camera.workspace = true
bevy_screen_diagnostics.workspace = true
bevy_editor_pls.workspace = true
creature-builder.workspace = true
data-structure-utils.workspace = true
rand = "0.8.5"
rand_distr = "0.4.3"
homedir = "0.2.1"
ron = "0.8"
serde = { version = "1.0.197", features = ["derive"] }

[[test]]
name = "behavior_evolver"
path = "tests/behavior_evolver.rs"
harness = false

[[test]]
name = "mutate"
path = "tests/mutate.rs"
harness = true

[[test]]
name = "evolve"
path = "tests/evolve.rs"
harness = false
