[package]
name = "creature-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true

bevy_panorbit_camera.workspace = true
bevy_screen_diagnostics.workspace = true
bevy_editor_pls.workspace = true

data-structure-utils.workspace = true
random-derive.workspace = true

bitflags = "2.4.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }

[[test]]
name = "creature-builder"
path = "tests/creature_builder.rs"
harness = false
