[package]
name = "bevy_editor_pls_core"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"
readme = "README.md"

[dependencies]
bevy = { version = "0.12", default-features = false }
bevy-inspector-egui.workspace = true
indexmap = "2"
egui_dock = "0.8"
